--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -11,7 +11,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 jobs:
-  prettify:
+  prettier:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,23 +25,21 @@ jobs:
         # Temp fix, more on here - https://github.com/creyD/prettier_action#problem-with-npm-v9-19022023
       - name: Install npm v8
         run: npm i -g npm@8
+      - name: Install Prettier Tailwind Package
+        run: npm install prettier-plugin-tailwindcss
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
         with:
           prettier_options: --write **/*.{js,jsx,ts,tsx}
           only_changed: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
-  test-runner:
+  linter_and_typescript:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "16.15.1"
-      - uses: actions/setup-python@v3
-        with:
-          python-version: "3.8"
-          cache: "pip"
       - name: Cache node modules
         id: cache-node-modules
         uses: actions/cache@v3
