--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -25,8 +25,10 @@ jobs:
         # Temp fix, more on here - https://github.com/creyD/prettier_action#problem-with-npm-v9-19022023
       - name: Install npm v8
         run: npm i -g npm@8
+      - name: Install Yarn
+        run: npm install -g yarn
       - name: Install Prettier Tailwind Package
-        run: npm install prettier-plugin-tailwindcss
+        run: yarn add -D prettier-plugin-tailwindcss
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
         with:
