--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
-    "lint:quiet": "eslint . --ext ts,tsx --quiet  --report-unused-disable-directives --max-warnings 0",
+    "lint:quiet": "eslint . --ext ts,tsx --quiet --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "lint:report": "eslint --output-file eslint_report.json --format json . --ext ts,tsx",
+    "lint:report": "eslint . --ext ts,tsx --output-file eslint_report.json --format json",
     "prettier": "prettier --write ."
   },
   "dependencies": {
