--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
-  "cSpell.words": ["darkgray"]
+  "cSpell.words": ["darkgray", "svgr"]
 }
