--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-checker": "^0.6.2"
+    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-svgr": "^3.1.0"
   }
 }
