try only stage deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "git": {
+    "deploymentEnabled": {
+      "stage": true,
+      "*": false
+    }
+  },
   "github": {
     "silent": true
   },
