Implement Smart form template (#5)
* make template

* Add form select

* fix some lint

* Prettified Code!

* finish service user creation

* miss merge

* remove logs

* better typing

* no particular reason for this

* add yup resolver and make name field required

* remove custom from name, set default flex gap

---------

Co-authored-by: Shahidul Islam <sonysust@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@reducers/*": ["./src/redux/reducers/*"],
       "$types/*": ["./src/types/*"],
       "@redux/*": ["./src/redux/*"],
+      "@common/*": ["./src/components/common/*"],
       "@assets/*": ["./src/assets/*"],
       "@/*": ["./src/*"]
     }
