Fix last couple of issues from last service user creation pr (#8)
* Fix last couple of issues from last service user creation pr

* fix name type, not using mui directly

* fix some more type issues

* couple of more changes

* remove Custom* prefix for custom components

* restrict auto-import from @mui

* fix ts errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,22 +11,22 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
+      "@common/*": ["./src/components/common/*"],
       "@components/*": ["./src/components/*"],
       "@reducers/*": ["./src/redux/reducers/*"],
       "$types/*": ["./src/types/*"],
       "@redux/*": ["./src/redux/*"],
-      "@common/*": ["./src/components/common/*"],
       "@assets/*": ["./src/assets/*"],
       "@/*": ["./src/*"]
     }
   },
   "include": ["src", "src/custom.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": ["@mui/material"]
 }
