--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
-  "cSpell.words": ["darkgray", "svgr"]
+  "cSpell.words": ["darkgray", "svgr"],
+  "typescript.preferences.importModuleSpecifier": "non-relative"
 }
