[OVIS] Rota UI (#18)
* Implement big calendar for rota

* refactor the code

* add plan activity tab

* rota event creation and fetching done

* show actual care plan activities

* add different color

* add real plan activity

* fix error

* remove console log

* fix errors

* remove more comments

--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "@mui/x-data-grid": "^6.17.0",
     "@mui/x-date-pickers": "^5.0.14",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash-es": "^4.17.11",
+    "@types/react-big-calendar": "^1.8.4",
+    "date-fns": "^2.23.0",
     "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
+    "react-big-calendar": "^0.35.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-qr-code": "^2.0.12",
