--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0",
+    "sweetalert2": "^11.10.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
