--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/lodash-es": "^4.17.11",
     "@types/react-big-calendar": "^1.8.4",
+    "classnames": "^2.3.2",
     "date-fns": "^2.23.0",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-big-calendar": "^0.35.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
