--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@mui/x-data-grid": "^6.17.0",
     "@mui/x-date-pickers": "^5.0.14",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/google-map-react": "^2.1.10",
     "@types/lodash-es": "^4.17.11",
     "@types/react-big-calendar": "^1.8.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.23.0",
     "dayjs": "^1.11.10",
+    "google-map-react": "^2.2.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-big-calendar": "^0.35.0",
@@ -42,7 +45,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0",
+    "supercluster": "^8.0.1",
     "sweetalert2": "^11.10.0",
+    "use-supercluster": "^1.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
