Refactor dynamic navbar routing (#33)
* move to new layout design

* remove logs

* more flexible routing

* finish refactoring

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@common/*": ["./src/components/common/*"],
       "@serviceUsersUI/*": ["./src/components/serviceUsers/*"],
       "@components/*": ["./src/components/*"],
+      "@shared/*": ["./src/shared/*"],
       "@reducers/*": ["./src/redux/reducers/*"],
       "$types/*": ["./src/types/*"],
       "@redux/*": ["./src/redux/*"],
