--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.23.0",
     "dayjs": "^1.11.10",
+    "getaddress-api": "^1.3.1",
     "google-map-react": "^2.2.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
