use all envs from env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-CAREMASTER_BACKEND_URL=http://localhost:8080
+CAREMASTER_BACKEND_URL=
+CAREMASTER_GOOGLE_MAPS_API_KEY=
+CAREMASTER_GET_ADDRESS_API_KEY=
