--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
-  "cSpell.words": ["CAREMASTER", "darkgray", "rightbars", "svgr"],
+  "cSpell.words": ["CAREMASTER", "careworker", "darkgray", "rightbars", "svgr"],
   "typescript.preferences.importModuleSpecifier": "non-relative"
 }
