--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0",
     "supercluster": "^8.0.1",
     "sweetalert2": "^11.10.0",
